# janus-gateway-sfu

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
src/: cxx_interface.h  glue.cpp  plugin.c  sfu.cpp  sfu.h
